# flashcard-gpt

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/flashcard-gpt-core/: .surrealdb  Cargo.toml
crates/flashcard-gpt-core/db-migrations/migrations/: 20240902_185441_Initial.surql
crates/flashcard-gpt-core/src/: error.rs  lib.rs  logging.rs  macros.rs  reexports.rs
crates/flashcard-gpt-core/src/dto/: binding.rs  card.rs  card_group.rs  deck.rs  deck_card.rs  deck_card_group.rs  global_settings.rs  history.rs  llm.rs  mod.rs  tag.rs  time.rs  user.rs
crates/flashcard-gpt-core/src/ext/: db.rs  mod.rs  mutex.rs  record_id.rs  response_ext.rs
crates/flashcard-gpt-core/src/llm/: card_generator.rs  card_generator_service.rs  custom_executor.rs  mod.rs
crates/flashcard-gpt-core/src/model/: binding.rs  card.rs  card_group.rs  deck.rs  deck_card.rs  deck_card_group.rs  global_settings.rs  history.rs  llm.rs  tag.rs  time.rs  user.rs
crates/flashcard-gpt-core/src/repo/: binding.rs  card.rs  card_group.rs  deck.rs  generic_repo.rs  global_settings.rs  history.rs  mod.rs  tag.rs  user.rs
crates/flashcard-gpt-core/src/tests/: mod.rs  surreal_test_container.rs  utils.rs
crates/flashcard-gpt-core/tests/: card.rs  mod.rs  tag.rs  user.rs
crates/flashcard-gpt-core/tests/db/: binding.rs  card.rs  card_group.rs  deck.rs  global_settings.rs  history.rs  mod.rs  tag.rs
crates/flashcard-gpt-core/tests/llm/: card_generator_service.rs  mod.rs  sample_code.txt
crates/flashcard-gpt-telegram/: Cargo.toml
crates/flashcard-gpt-telegram/src/: chat_manager.rs  command.rs  macros.rs  main.rs  message_render.rs  notifier_task.rs  state.rs
crates/flashcard-gpt-telegram/src/command/: answer.rs  card.rs  card_group.rs  deck.rs  ext.rs  mod.rs  root.rs  tag.rs  user.rs
crates/flashcard-gpt-telegram/src/db/: repositories.rs
crates/flashcard-gpt-telegram/src/ext/: binding.rs  bot.rs  card.rs  dialogue.rs  json_value.rs  markdown.rs  menu_repr.rs  message.rs  mod.rs  rendering.rs
crates/flashcard-gpt-telegram/src/llm/: card_generation_service.rs  mod.rs  schema.rs
crates/flashcard-gpt-telegram/src/schema/: answer.rs  card.rs  deck.rs  mod.rs  root.rs
crates/flashcard-gpt-telegram/src/state/: bot_state.rs  mod.rs  state_description.rs  state_fields.rs
crates/flashcard-gpt-tests/: Cargo.toml
crates/flashcard-gpt-tests/src/: lib.rs
crates/flashcard-gpt-tests/src/db/: mod.rs  test_db.rs  utils.rs
