[package]
name = "flashcard-gpt-core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
surrealdb-beta = { version = "2.0.0" }
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["default", "serde"] }
chrono-tz = "0.9"
thiserror = "1"
