[package]
name = "flashcard-gpt-core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
surrealdb-beta = { version = "2.0.0" }
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["default", "serde"] }
chrono-tz = { version = "0.10", features = ["default", "serde"] }
humantime = "2.1"
humantime-serde = "1.1"
thiserror = "1"
once_cell = "1.19"
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
console-subscriber = { version = "0.4", features = ["env-filter"] }
atty = { version = "0.2", features = [] }

[dev-dependencies]
testcontainers = "0.22"
log = "0.4"
pretty_env_logger = "0.5.0"
testresult = "0.4"
