[package]
name = "flashcard-gpt-core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
bon = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }
atty = { workspace = true }

llm-chain = { workspace = true }
llm-chain-openai = { workspace = true }
slug = { workspace = true }
itertools = { workspace = true }

markdown = { workspace = true }

[dev-dependencies]
flashcard-gpt-tests = { path = "../flashcard-gpt-tests" }
testresult = "0.4"
