[package]
name = "flashcard-gpt-telegram"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
flashcard-gpt-core = { path = "../flashcard-gpt-core" }
anyhow = "1"

strum = "0.26"
strum_macros = "0.26"

slug = "0.1"
paste = "1"
serde = { version = "1.0.210", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
console-subscriber = { version = "0.4", features = ["env-filter"] }
atty = { version = "0.2", features = [] }

itertools = "0.13"

llm-chain = "0.13"
llm-chain-openai = "0.13"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
testresult = "0.4"
