[package]
name = "flashcard-gpt-telegram"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
flashcard-gpt-core = { path = "../flashcard-gpt-core" }
teloxide = { workspace = true }
anyhow = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

paste = "1"
serde = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }
atty = { workspace = true }

itertools = { workspace = true }

llm-chain = { workspace = true }
llm-chain-openai = { workspace = true }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
testresult = "0.4"
flashcard-gpt-tests = { path = "../flashcard-gpt-tests" }
