[package]
name = "flashcard-gpt-tests"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
surrealdb = { version = "2" }
testcontainers = "0.22"
testresult = "0.4"
ctor = "0.2"
flashcard-gpt-core = { path = "../flashcard-gpt-core" }
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }
bon = "2.3"
