[package]
name = "flashcard-gpt-tests"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
surrealdb = { workspace = true }
testcontainers = "0.23"
testresult = "0.4"
ctor = "0.2"
flashcard-gpt-core = { path = "../flashcard-gpt-core" }
tracing = { workspace = true }
tokio = { workspace = true }
bon = { workspace = true }
paste = { workspace = true }
